--- a/sections/testimonials.liquid
+++ b/sections/testimonials.liquid
@@ -98,7 +98,7 @@
       {%- endif -%}
 
       {%- if carousel -%}
-        <div class="carousel{% if show_navigation %} carousel--controls{%- endif -%}" aria-role="Gallery">
+        <div class="carousel" aria-role="Gallery">
           <div class="carousel__wrapper">
       {%- endif -%}
 
