--- a/assets/carousel.css
+++ b/assets/carousel.css
@@ -34,12 +34,8 @@
   scrollbar-color: transparent transparent;
 }
 
-.carousel--controls .carousel__wrapper {
-  padding-bottom: 95px;
-}
-
-.carousel--controls .carousel__wrapper {
-  padding-bottom: 95px;
+.carousel.controls .carousel__wrapper {
+  padding-bottom: 100px;
 }
 
 .carousel__inner {
@@ -50,7 +46,6 @@
 .carousel__item {
   position: relative;
   min-width: var(--slide-width-mobile);
-  transition: all calc(var(--animation-duration) + 0.2s) var(--transition-function-ease);
   padding: 0;
   scroll-snap-align: start;
   scroll-snap-stop: always;
@@ -66,11 +61,11 @@
 
 .carousel__pagination {
   position: absolute;
-  left: 0;
+  right: 0;
   bottom: 0;
   display: flex;
   margin: 0 -4px;
-  z-index: 1;
+  z-index: 2;
 }
 
 .carousel__pagination.hidden {
@@ -86,7 +81,7 @@
   line-height: 0;
   text-indent: -9999px;
   overflow: hidden;
-  margin: 0 0 20px;
+  margin: 0 0 16px;
   width: 16px;
   height: 16px;
 }
@@ -110,7 +105,7 @@
   bottom: 0;
   margin: 0 -8px;
   display: flex;
-  z-index: 1;
+  z-index: 2;
 }
 
 .carousel__navigation.hidden {
@@ -238,14 +233,30 @@
 }
 
 @media (min-width: 992px) {
+  .carousel:before,
+  .carousel:after {
+    content: "";
+    position: absolute;
+    right: calc(100% - 10px);
+    top: 0;
+    bottom: 0;
+    width: 62px;
+    z-index: 1;
+  }
+
+  .carousel::after {
+    right: auto;
+    left: calc(100% - 10px);
+  }
+
   .carousel__wrapper {
-    margin: 0 -32px;
-    width: calc(100% + 64px);
-    scroll-padding: 0 32px 0 0;
+    margin: 0 -16px;
+    width: calc(100% + 32px);
+    scroll-padding: 0 16px 0 0;
   }
 
   .carousel__inner {
-    padding: 0 0 0 32px;
+    padding: 0 0 0 16px;
   }
 
   .carousel__item {
@@ -253,71 +264,118 @@
   }
 
   .carousel__item:last-child {
-    min-width: calc(var(--slide-width) + 32px);
+    min-width: calc(var(--slide-width) + 16px);
   }
 
   .carousel__item:last-child .carousel__inner {
-    padding-right: 32px;
+    padding-right: 16px;
   }
 
   .carousel__full-width .carousel__inner {
-    padding-right: 32px;
+    padding-right: 16px;
   }
 
-  .carousel__destroy .carousel__wrapper {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(285px, 1fr));
-    gap: 24px;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    scroll-padding: 0;
+  .palette-one .carousel:before {
+    background: linear-gradient(90deg, var(--background-primary-1) 42.92%, var(--background-primary-1-00) 95%);
   }
 
-  .carousel__destroy .carousel__inner {
-    padding: 0;
+  .palette-one .carousel:after {
+    background: linear-gradient(-90deg, var(--background-primary-1) 42.92%, var(--background-primary-1-00) 95%);
   }
 
-  .carousel__destroy .carousel__item {
-    min-width: 100%;
+  .palette-two .carousel:before {
+    background: linear-gradient(90deg, var(--background-primary-2) 42.92%, var(--background-primary-2-00) 95%);
   }
 
-  .carousel__destroy .carousel__item:last-child .carousel__inner {
-    padding-right: 0;
+  .palette-two .carousel:after {
+    background: linear-gradient(-90deg, var(--background-primary-2) 42.92%, var(--background-primary-2-00) 95%);
   }
 
-  .carousel__destroy .carousel__navigation,
-  .carousel__destroy .carousel__pagination {
-    display: none;
+  .palette-three .carousel:before {
+    background: linear-gradient(90deg, var(--background-primary-3) 42.92%, var(--background-primary-3-00) 95%);
+  }
+
+  .palette-three .carousel:after {
+    background: linear-gradient(-90deg, var(--background-primary-3) 42.92%, var(--background-primary-3-00) 95%);
+  }
+
+  .palette-four .carousel:before {
+    background: linear-gradient(90deg, var(--background-primary-4) 42.92%, var(--background-primary-4-00) 95%);
+  }
+
+  .palette-four .carousel:after {
+    background: linear-gradient(-90deg, var(--background-primary-4) 42.92%, var(--background-primary-4-00) 95%);
+  }
+
+  .palette-five .carousel:before {
+    background: linear-gradient(90deg, var(--background-primary-5) 42.92%, var(--background-primary-5-00) 95%);
+  }
+
+  .palette-five .carousel:after {
+    background: linear-gradient(-90deg, var(--background-primary-5) 42.92%, var(--background-primary-5-00) 95%);
+  }
+}
+
+@media (min-width: 1200px) {
+  .palette-one .carousel:before {
+    background: linear-gradient(90deg, var(--background-primary-1) 58%, var(--background-primary-1-00) 95%);
+  }
+
+  .palette-one .carousel:after {
+    background: linear-gradient(-90deg, var(--background-primary-1) 58%, var(--background-primary-1-00) 95%);
+  }
+
+  .palette-two .carousel:before {
+    background: linear-gradient(90deg, var(--background-primary-2) 58%, var(--background-primary-2-00) 95%);
+  }
+
+  .palette-two .carousel:after {
+    background: linear-gradient(-90deg, var(--background-primary-2) 58%, var(--background-primary-2-00) 95%);
+  }
+
+  .palette-three .carousel:before {
+    background: linear-gradient(90deg, var(--background-primary-3) 58%, var(--background-primary-3-00) 95%);
+  }
+
+  .palette-three .carousel:after {
+    background: linear-gradient(-90deg, var(--background-primary-3) 58%, var(--background-primary-3-00) 95%);
+  }
+
+  .palette-four .carousel:before {
+    background: linear-gradient(90deg, var(--background-primary-4) 58%, var(--background-primary-4-00) 95%);
+  }
+
+  .palette-four .carousel:after {
+    background: linear-gradient(-90deg, var(--background-primary-4) 58%, var(--background-primary-4-00) 95%);
+  }
+
+  .palette-five .carousel:before {
+    background: linear-gradient(90deg, var(--background-primary-5) 58%, var(--background-primary-5-00) 95%);
+  }
+
+  .palette-five .carousel:after {
+    background: linear-gradient(-90deg, var(--background-primary-5) 58%, var(--background-primary-5-00) 95%);
   }
 }
 
 @media (min-width: 1273px) {
   .carousel__wrapper {
-    margin: 0;
-    width: 100%;
-    scroll-padding: 0;
+    margin: 0 -16px;
+    width: calc(100% + 32px);
+    scroll-padding: 0 16px 0 0;
   }
 
   .carousel__inner {
-    padding: 0 32px 0 0;
+    padding: 0 0 0 16px;
   }
 
   .carousel__item:last-child {
-    min-width: calc(var(--slide-width) - 32px);
-  }
-
-  .carousel__item:last-child .carousel__inner {
-    padding-right: 0;
+    min-width: calc(var(--slide-width) + 16px);
   }
 
   .carousel__full-width .carousel__item:last-child .carousel__inner,
   .carousel__full-width .carousel__inner {
     padding: 0;
-  }
-
-  .carousel__destroy .carousel__item {
-    min-width: 100%;
   }
 }
 
