--- a/sections/products.liquid
+++ b/sections/products.liquid
@@ -6,16 +6,23 @@
   {{ "products.css" | asset_url | stylesheet_tag }}
   {{ "product-card.css" | asset_url | stylesheet_tag }}
 
-  {%- assign show_carousel         = section.settings.show_carousel -%}
-  {%- assign show_navigation       = section.settings.show_navigation -%}
-  {%- assign show_pagination       = section.settings.show_pagination -%}
+  {%- assign button_label          = section.settings.button_label -%}
+  {%- assign button_url            = section.settings.button_url -%}
   {%- assign color_palette         = section.settings.color_palette -%}
+  {%- assign image                 = section.settings.image -%}
   {%- assign padding_top           = section.settings.padding_top -%}
   {%- assign padding_bottom        = section.settings.padding_bottom -%}
   {%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
   {%- assign padding_bottom_mobile = section.settings.padding_bottom_mobile -%}
-  {%- assign timer                 = section.settings.timer -%}
+  {%- assign rounded_corners       = section.settings.rounded_corners -%}
+  {%- assign show_borders          = section.settings.show_borders -%}
   {%- assign show_excerpt          = section.settings.show_excerpt -%}
+  {%- assign show_navigation       = section.settings.show_navigation -%}
+  {%- assign show_pagination       = section.settings.show_pagination -%}
+  {%- assign tag                   = section.settings.tag -%}
+  {%- assign tag_image             = section.settings.tag_image -%}
+  {%- assign timer                 = section.settings.timer -%}
+  {%- assign title                 = section.settings.title -%}
   {%- assign image_placeholder     = settings.image_placeholder -%}
   {%- assign is_focal              = settings.use_focal_images -%}
 
@@ -38,30 +45,24 @@
   {% comment %} CSS variables start {% endcomment %}
   {%- capture variables -%}
     {%- case padding_top -%}
-      {%- when 'none' -%}
-        --padding-top: 0;
       {%- when 'small' -%}
-        --padding-top: 24px;
+        --padding-top: 40px;
       {%- when 'medium' -%}
-        --padding-top: 68px;
+        --padding-top: 80px;
       {%- when 'large' -%}
         --padding-top: 112px;
     {%- endcase -%}
 
     {%- case padding_bottom -%}
-      {%- when 'none' -%}
-        --padding-bottom: 0;
       {%- when 'small' -%}
-        --padding-bottom: 24px;
+        --padding-bottom: 40px;
       {%- when 'medium' -%}
-        --padding-bottom: 68px;
+        --padding-bottom: 80px;
       {%- when 'large' -%}
         --padding-bottom: 112px;
     {%- endcase -%}
 
     {%- case padding_top_mobile -%}
-      {%- when 'none' -%}
-        --padding-top-mobile: 0;
       {%- when 'small' -%}
         --padding-top-mobile: 18px;
       {%- when 'medium' -%}
@@ -71,8 +72,6 @@
     {%- endcase -%}
 
     {%- case padding_bottom_mobile -%}
-      {%- when 'none' -%}
-        --padding-bottom-mobile: 0;
       {%- when 'small' -%}
         --padding-bottom-mobile: 18px;
       {%- when 'medium' -%}
@@ -80,17 +79,52 @@
       {%- when 'large' -%}
         --padding-bottom-mobile: 60px;
     {%- endcase -%}
+
+    {%- case rounded_corners -%}
+      {%- when 'none' -%}
+        --border-radius-rounded-blocks: 0px;
+      {%- when 'small' -%}
+        --border-radius-rounded-blocks: 8px;
+      {%- when 'medium' -%}
+        --border-radius-rounded-blocks: 16px;
+      {%- when 'large' -%}
+        --border-radius-rounded-blocks: 32px;
+    {%- endcase -%}
   {%- endcapture -%}
   {% comment %} CSS variables end {% endcomment %}
 
   <div
-    class="products__wrapper{% if color_palette != blank %} palette-{{ color_palette }}{% endif %}{% if padding_top != blank or padding_top_mobile != blank %} products__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} products__wrapper--padding-bottom{%- endif -%}"
+    class="products__wrapper palette-{{ color_palette }}{% if padding_top != blank or padding_top_mobile != blank %} products__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} products__wrapper--padding-bottom{% endif %}{% if image != blank %} products__wrapper--with-background{%- endif -%}"
     style="{{- variables | escape -}}"
   >
     <div class="products__container container">
-      <div class="products__list{% if carousel %} carousel carousel__pause{% if show_pagination or show_navigation %} carousel--controls{% endif %}{% endif %}{% unless show_carousel %} carousel__destroy{%- endunless -%}">
+      {%- if title != blank or tag != blank or tag_image != blank -%}
+        <div class="products__top">
+          {%- if tag_image.url != blank -%}
+            <div class="products__tag-image-wrapper">
+              {%- render 'image',
+                image: tag_image,
+                loading: 'lazy',
+                class: 'products__tag-image',
+                custom_width: '100',
+                custom_size: '100px'
+              -%}
+            </div>
+          {%- endif -%}
+
+          {%- if tag != blank -%}
+            <strong class="products__tag tagline">{{- tag -}}</strong>
+          {%- endif -%}
+
+          {%- if title != blank -%}
+            <h2 class="products__title h4">{{- title -}}</h2>
+          {%- endif -%}
+        </div>
+      {%- endif -%}
+
+      <div class="products__list{% if carousel %} carousel carousel__pause{%- endif -%}"{% if carousel %} aria-role="Gallery"{% endif %}>
         {%- if carousel -%}
-          <input class="carousel__timer" type="hidden" name="hidden" value="{{- timer -}}">
+          <input class="carousel__timer" type="hidden" name="hidden" value="{{- timer -}}" aria-hidden="true">
           <div class="carousel__wrapper">
         {%- endif -%}
 
@@ -109,6 +143,7 @@
                     {%- render 'product-card',
                         product: product,
                         placeholder: image_placeholder,
+                        show_borders: show_borders,
                         focal: is_focal,
                         show_excerpt: show_excerpt
                     -%}
@@ -122,12 +157,12 @@
           </div>
 
           {%- if show_navigation -%}
-            <div class="carousel__navigation hidden" aria-label="Carousel navigation" aria-hidden="true">
-              <span class="carousel__btn prev" title="Prev slide">
+            <div class="carousel__navigation hidden" aria-role="Carousel navigation">
+              <span class="carousel__btn prev" aria-label="Prev slide">
                 Previous slide
                 {%- render 'icon-arrow-right-full' -%}
               </span>
-              <span class="carousel__btn next" title="Next slide">
+              <span class="carousel__btn next" aria-label="Next slide">
                 Next slide
                 {%- render 'icon-arrow-right-full' -%}
               </span>
@@ -135,12 +170,12 @@
           {%- endif -%}
 
           {%- if show_pagination -%}
-            <div class="carousel__pagination hidden" aria-label="Carousel pagination" aria-hidden="true">
+            <div class="carousel__pagination hidden" aria-role="Carousel navigation">
               {%- for item in items limit: 8 -%}
                 {%- assign first = forloop.first -%}
                 {%- assign index = forloop.index -%}
 
-                <span class="carousel__dot{% if first %} active{%- endif -%}" data-index="{{- index -}}" title="Jump to slide {{ index }}">
+                <span class="carousel__dot{% if first %} active{%- endif -%}" data-index="{{- index -}}" aria-label="Jump to slide {{ index }}">
                   Go to slide {{ index }}
                 </span>
               {%- endfor -%}
@@ -148,7 +183,26 @@
           {%- endif -%}
         {%- endif -%}
       </div>
+
+      {%- if button_label != blank and button_url != blank -%}
+        <div class="products__buttons">
+          <a href="{{ button_url }}" class="products__button button button--outlined button--large">
+            {{- button_label -}}
+          </a>
+        </div>
+      {%- endif -%}
     </div>
+
+    {%- if image != blank -%}
+      <div class="products__background-wrapper">
+        {%- render 'image',
+          image: image,
+          loading: 'lazy',
+          class: 'products__background',
+          size: 'xxl'
+        -%}
+      </div>
+    {%- endif -%}
   </div>
 {%- endif -%}
 
@@ -175,9 +229,75 @@
           {
             "value": "two",
             "label": "Color set 2"
+          },
+          {
+            "value": "three",
+            "label": "Color set 3"
+          },
+          {
+            "value": "four",
+            "label": "Color set 4"
+          },
+          {
+            "value": "five",
+            "label": "Color set 5"
           }
         ],
         "default": "one"
+      },
+      {
+        "type": "text",
+        "id": "tag",
+        "label": "Tagline",
+        "default": "This week"
+      },
+      {
+        "type": "image_picker",
+        "id": "tag_image",
+        "label": "Tagline image (optional)",
+        "info": "Shown above the tagline text"
+      },
+      {
+        "type": "text",
+        "id": "title",
+        "label": "Title",
+        "default": "Popular products"
+      },
+      {
+        "type": "image_picker",
+        "id": "image",
+        "label": "Background image",
+        "default": "booqable://assets/image-hero.jpg"
+      },
+      {
+        "type": "checkbox",
+        "id": "show_borders",
+        "default": true,
+        "label": "Show borders"
+      },
+      {
+        "type": "select",
+        "id": "rounded_corners",
+        "label": "Rounded corners",
+        "options": [
+          {
+            "value": "none",
+            "label": "None"
+          },
+          {
+            "value": "small",
+            "label": "Small"
+          },
+          {
+            "value": "medium",
+            "label": "Medium"
+          },
+          {
+            "value": "large",
+            "label": "Large"
+          }
+        ],
+        "default": "none"
       },
       {
         "type": "checkbox",
@@ -200,14 +320,23 @@
       },
       {
         "type": "header",
-        "content": "Carousel settings"
+        "content": "Buttons settings"
       },
       {
-        "type": "checkbox",
-        "id": "show_carousel",
-        "default": true,
-        "label": "Show products as carousel",
-        "info": "If it's not checked, bellow settings will be ignored"
+        "type": "text",
+        "id": "button_label",
+        "label": "Button label",
+        "default": "See all products",
+        "info": "Leave blank to hide the button"
+      },
+      {
+        "type": "url",
+        "id": "button_url",
+        "label": "Button link"
+      },
+      {
+        "type": "header",
+        "content": "Carousel settings"
       },
       {
         "type": "checkbox",
@@ -256,7 +385,7 @@
             "label": "Large"
           }
         ],
-        "default": "small"
+        "default": "large"
       },
       {
         "type": "select",
@@ -308,7 +437,7 @@
             "label": "Large"
           }
         ],
-        "default": "small"
+        "default": "medium"
       },
       {
         "type": "select",
