--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -4,6 +4,7 @@
 
   product - { product } *required,
   placeholder - image optional,
+  show_borders - boolean optional,
   focal - boolean optional,
   img_size - string optional,
   show_excerpt - boolean *required
@@ -13,6 +14,7 @@
   {%- render 'product-card',
       product: your_id,
       placeholder: your_id,
+      show_borders: your_id,
       focal: your_id,
       img_size: your_string,
       show_excerpt: true
@@ -49,7 +51,7 @@
   {%- assign id      = product.id -%}
   {%- assign url     = product.url -%}
   {%- assign name    = product.name -%}
-  {%- assign excerpt = product.description | truncate: 118, " ..." -%}
+  {%- assign excerpt = product.description | truncatewords: 20, " ..."  -%}
   {%- assign price   = product | product_price -%}
   {%- assign period  = product | product_price_label -%}
 
@@ -66,7 +68,7 @@
   {%- assign period  = "1 day" -%}
 {%- endif -%}
 
-<div class="product-card" {% if id != blank %}id="{{- id -}}"{%- endif -%}>
+<div class="product-card{% if show_borders %} product-card--border{%- endif -%}" {% if id != blank %}id="{{- id -}}"{%- endif -%}>
   <div class="product-card__vision{% unless image != blank %} no-image{%- endunless -%}">
     {%- if image.url != blank -%}
       {%- render 'image',
