--- a/snippets/root-styles.liquid
+++ b/snippets/root-styles.liquid
@@ -12,6 +12,7 @@
 
     {%- if settings.primary_color_1 != blank -%}
       --color-primary-1: {{- settings.primary_color_1 -}};
+      --color-primary-1-00: {{- settings.primary_color_1 | append: "00" -}};
       --color-primary-1-30: {{- settings.primary_color_1 | append: "4D" -}};
       --color-primary-1-67: {{- settings.primary_color_1 | append: "AB" -}};
       --color-third-1: {{- settings.primary_color_1 | append: "66" -}};
@@ -21,6 +22,7 @@
       --color-border-1: {{- settings.primary_color_1 | append: "26" -}};
     {%- else -%}
       --color-primary-1: #1A3333;
+      --color-primary-1-00: #1A333300;
       --color-primary-1-30: #1A33334D;
       --color-primary-1-67: #1A3333AB;
       --color-third-1: #1A333366;
@@ -74,6 +76,7 @@
 
     {%- if settings.primary_color_2 != blank -%}
       --color-primary-2: {{- settings.primary_color_2 -}};
+      --color-primary-2-00: {{- settings.primary_color_2 | append: "00" -}};
       --color-primary-2-30: {{- settings.primary_color_2 | append: "4D" -}};
       --color-primary-2-67: {{- settings.primary_color_2 | append: "AB" -}};
       --color-third-2: {{- settings.primary_color_2 | append: "66" -}};
@@ -83,6 +86,7 @@
       --color-border-2: {{- settings.primary_color_2 | append: "26" -}};
     {%- else -%}
       --color-primary-2: #1A3333;
+      --color-primary-2-00: #1A333300;
       --color-primary-2-30: #1A33334D;
       --color-primary-2-67: #1A3333AB;
       --color-third-2: #1A333366;
@@ -136,6 +140,7 @@
 
     {%- if settings.primary_color_3 != blank -%}
       --color-primary-3: {{- settings.primary_color_3 -}};
+      --color-primary-3-00: {{- settings.primary_color_3 | append: "00" -}};
       --color-primary-3-30: {{- settings.primary_color_3 | append: "4D" -}};
       --color-primary-3-67: {{- settings.primary_color_3 | append: "AB" -}};
       --color-third-3: {{- settings.primary_color_3 | append: "66" -}};
@@ -145,6 +150,7 @@
       --color-border-3: {{- settings.primary_color_3 | append: "26" -}};
     {%- else -%}
       --color-primary-3: #F6F4F2;
+      --color-primary-3-00: #F6F4F200;
       --color-primary-3-30: #F6F4F24D;
       --color-primary-3-67: #F6F4F2AB;
       --color-third-3: #F6F4F266;
@@ -198,6 +204,7 @@
 
     {%- if settings.primary_color_4 != blank -%}
       --color-primary-4: {{- settings.primary_color_4 -}};
+      --color-primary-4-00: {{- settings.primary_color_4 | append: "00" -}};
       --color-primary-4-30: {{- settings.primary_color_4 | append: "4D" -}};
       --color-primary-4-67: {{- settings.primary_color_4 | append: "AB" -}};
       --color-third-4: {{- settings.primary_color_4 | append: "66" -}};
@@ -207,6 +214,7 @@
       --color-border-4: {{- settings.primary_color_4 | append: "26" -}};
     {%- else -%}
       --color-primary-4: #F6F4F2;
+      --color-primary-4-00: #F6F4F200;
       --color-primary-4-30: #F6F4F24D;
       --color-primary-4-67: #F6F4F2AB;
       --color-third-4: #F6F4F266;
@@ -260,6 +268,7 @@
 
     {%- if settings.primary_color_5 != blank -%}
       --color-primary-5: {{- settings.primary_color_5 -}};
+      --color-primary-5-00: {{- settings.primary_color_5 | append: "00" -}};
       --color-primary-5-30: {{- settings.primary_color_5 | append: "4D" -}};
       --color-primary-5-67: {{- settings.primary_color_5 | append: "AB" -}};
       --color-third-5: {{- settings.primary_color_5 | append: "66" -}};
@@ -269,6 +278,7 @@
       --color-border-5: {{- settings.primary_color_5 | append: "26" -}};
     {%- else -%}
       --color-primary-5: #1A3333;
+      --color-primary-5-00: #1A333300;
       --color-primary-5-30: #1A33334D;
       --color-primary-5-67: #1A3333AB;
       --color-third-5: #1A333366;
