--- a/assets/call-to-action.css
+++ b/assets/call-to-action.css
@@ -1,260 +1,144 @@
-.cta {
-  position: relative;
-  overflow: hidden;
-}
-
 .cta__wrapper {
-  text-align: center;
-}
-
-.cta__wrapper--padding-top {
-  padding-top: var(--padding-top-mobile);
-}
-
-.cta__wrapper--padding-bottom {
-  padding-bottom: var(--padding-bottom-mobile);
-}
-
-.cta__container {
-  position: relative;
-  z-index: 1;
-}
-
-.cta__header {
-  text-align: center;
-  max-width: var(--max-width-narrow);
-  margin: 0 auto;
+  height: 100%;
+  overflow: hidden;
   position: relative;
 }
 
-.cta__header-title {
-  margin: 0 0 25px;
+.cta__container--padding-top {
+  padding-top: var(--padding-top-mobile, 0);
 }
 
-.cta__header-title:last-child {
-  margin: 0;
+.header-transparent ~ main .cta:first-child .cta__container--padding-top {
+  padding-top: calc(var(--padding-top-mobile, 0px) + var(--header-height, 110px) - var(--top-bar-height, 0px));
 }
 
-.cta__header-buttons {
-  padding-top: 38px;
-  margin-bottom: calc(-1 * var(--button-margin-bottom));
+.cta__container--padding-bottom {
+  padding-bottom: var(--padding-bottom-mobile, 0);
 }
 
-.cta__header-button {
+.cta__text-area {
+  text-align: center;
+}
+
+.cta__buttons {
+  margin: 40px 0 calc(-1 * var(--button-margin-bottom));
+}
+
+.cta__button {
   margin-left: 8px;
   margin-right: 8px;
 }
 
-.cta__image-wrapper {
+.cta__vision {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   overflow: hidden;
+  z-index: -1;
 }
 
-.cta__image-wrapper img {
-  object-fit: cover;
-  max-width: none;
-  height: 100%;
-  width: 100%;
-  display: block;
-}
-
-.cta__image-wrapper svg {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  height: 100%;
-  min-width: 100%;
-}
-
-.cta__image-wrapper:after {
+.cta__vision--overlay:after {
   content: "";
   position: absolute;
   left: 0;
   top: 0;
-  bottom: -120px;
-  right: 0;
-}
-
-.cta__image-floral-wrapper {
-  position: absolute;
-  left: 0;
-  top: 0;
   right: 0;
   bottom: 0;
-  display: flex;
 }
 
-.cta__image-floral-wrapper svg {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  transform: translate(-20px, 25%);
-  opacity: 0.2;
-}
-
-.cta__image-floral-wrapper-col {
-  position: relative;
+.cta__image {
   width: 100%;
   height: 100%;
+  max-width: none;
+  object-fit: cover;
 }
 
-.cta__image-floral-wrapper-col:last-child {
-  display: none;
-}
-
-.cta__image-floral-wrapper-col:last-child svg {
-  top: 0;
-  left: auto;
-  bottom: auto;
-  right: 0;
-  max-height: none;
-  transform: translate(50px, 0px);
-}
-
-.palette-one.cta__wrapper {
-  background: var(--background-accent-1);
+.palette-one .cta__content {
   color: var(--color-primary-1);
 }
 
-.palette-one .cta__header-button.button--primary {
-  background: var(--color-primary-1);
-  border-color: var(--color-primary-1);
-  color: var(--background-primary-1);
+.palette-one .cta__vision {
+  background: var(--background-primary-1);
 }
 
-.palette-one .cta__header-button.button--primary:hover {
-  background: var(--color-primary-1);
-  border-color: var(--color-primary-1);
-  opacity: 0.85;
+.palette-one .cta__vision--overlay:after {
+  background: linear-gradient(180deg, var(--background-primary-1) 11.17%, var(--background-primary-1-00) 41.57%),
+              linear-gradient(349deg, var(--color-primary-1-30) 43.3%, var(--color-primary-1-00) 80.3%);
 }
 
-.palette-one .cta__header-button.button--outlined {
-  color: var(--background-primary-1);
-  border-color: var(--color-primary-1);
-}
-
-.palette-one .cta__header-button.button--outlined:hover {
-  background: var(--color-primary-1-hover);
-}
-
-.palette-one .cta__image-floral-wrapper g,
-.palette-one .cta__image-floral-wrapper path,
-.palette-one .cta__image-wrapper g,
-.palette-one .cta__image-wrapper path {
-  fill: var(--color-primary-1);
-}
-
-.palette-one .cta__image-wrapper:after {
-  background: linear-gradient(180.44deg, var(--background-accent-1) 51.3%, var(--background-accent-1-00) 81.06%);
-}
-
-.palette-two.cta__wrapper {
-  background: var(--background-accent-2);
+.palette-two .cta__content {
   color: var(--color-primary-2);
 }
 
-.palette-two .cta__header-button.button--primary {
-  background: var(--color-primary-2);
-  border-color: var(--color-primary-2);
-  color: var(--background-primary-2);
+.palette-two .cta__vision {
+  background: var(--background-primary-2);
 }
 
-.palette-two .cta__header-button.button--primary:hover {
-  background: var(--color-primary-2);
-  border-color: var(--color-primary-2);
-  opacity: 0.85;
+.palette-two .cta__vision--overlay:after {
+  background: linear-gradient(180deg, var(--background-primary-2) 11.17%, var(--background-primary-2-00) 41.57%),
+              linear-gradient(349deg, var(--color-primary-2-30) 43.3%, var(--color-primary-2-00) 80.3%);
 }
 
-.palette-two .cta__header-button.button--outlined {
-  color: var(--background-primary-2);
-  border-color: var(--color-primary-2);
+.palette-three .cta__content {
+  color: var(--color-primary-3);
 }
 
-.palette-two .cta__header-button.button--outlined:hover {
-  background: var(--color-primary-2-hover);
-}
-
-.palette-two .cta__image-floral-wrapper g,
-.palette-two .cta__image-floral-wrapper path,
-.palette-two .cta__image-wrapper g,
-.palette-two .cta__image-wrapper path {
-  fill: var(--color-primary-2);
-}
-
-.palette-two .cta__image-wrapper:after {
-  background: linear-gradient(180.44deg, var(--background-accent-2) 51.3%, var(--background-accent-2-00) 81.06%);
-}
-
-.palette-three.cta__wrapper {
+.palette-three .cta__vision {
   background: var(--background-primary-3);
-  color: var(--color-secondary-3);
 }
 
-.palette-three .cta__header-button.button--primary {
-  background: var(--background-accent-3);
-  border-color: var(--background-accent-3);
-  color: var(--color-accent-3);
+.palette-three .cta__vision--overlay:after {
+  background: linear-gradient(180deg, var(--background-primary-3) 11.17%, var(--background-primary-3-00) 41.57%),
+              linear-gradient(349deg, var(--color-primary-3-30) 43.3%, var(--color-primary-3-00) 80.3%);
 }
 
-.palette-three .cta__header-button.button--primary:hover {
-  background: var(--background-accent-3);
-  border-color: var(--background-accent-3);
-  opacity: 0.85;
+.palette-four .cta__content {
+  color: var(--color-primary-4);
 }
 
-.palette-three .cta__header-button.button--outlined {
-  color: var(--color-accent-3);
-  border-color: var(--background-accent-3);
+.palette-four .cta__vision {
+  background: var(--background-primary-4);
 }
 
-.palette-three .cta__header-button.button--outlined:hover {
-  background: var(--background-accent-3-hover);
+.palette-four .cta__vision--overlay:after {
+  background: linear-gradient(180deg, var(--background-primary-4) 11.17%, var(--background-primary-4-00) 41.57%),
+              linear-gradient(349deg, var(--color-primary-4-30) 43.3%, var(--color-primary-4-00) 80.3%);
 }
 
-.palette-three .cta__image-floral-wrapper g,
-.palette-three .cta__image-floral-wrapper path,
-.palette-three .cta__image-wrapper g,
-.palette-three .cta__image-wrapper path {
-  fill: var(--color-secondary-3);
+.palette-five .cta__content {
+  color: var(--color-primary-5);
 }
 
-.palette-three .cta__image-wrapper:after {
-  background: linear-gradient(180.44deg, var(--background-primary-3) 51.3%, var(--background-primary-3-00) 81.06%);
+.palette-five .cta__vision {
+  background: var(--background-primary-5);
 }
 
-@media (min-width: 667px) {
-  .cta__image-floral-wrapper svg,
-  .cta__image-wrapper svg {
-    height: auto;
-  }
-
-  .cta__image-floral-wrapper-col:last-child {
-    display: block;
-  }
-}
-
-@media (min-width: 810px) {
-  .cta__image-wrapper svg {
-    min-height: 100%;
-    height: auto;
-  }
+.palette-five .cta__vision--overlay:after {
+  background: linear-gradient(180deg, var(--background-primary-5) 11.17%, var(--background-primary-5-00) 41.57%),
+              linear-gradient(349deg, var(--color-primary-5-30) 43.3%, var(--color-primary-5-00) 80.3%);
 }
 
 @media (min-width: 992px) {
-  .cta__wrapper--padding-top {
-    padding-top: var(--padding-top);
+  .cta__container--padding-top {
+    padding-top: var(--padding-top, 0);
   }
 
-  .cta__wrapper--padding-bottom {
-    padding-bottom: var(--padding-bottom);
+  .header-transparent ~ main .cta:first-child .cta__container--padding-top {
+    padding-top: calc(var(--padding-top, 0px) + var(--header-height, 110px) - var(--top-bar-height, 0px));
   }
 
-  .cta__image-wrapper:after {
-    bottom: -160px;
+  .cta__container--padding-bottom {
+    padding-bottom: var(--padding-bottom, 0);
+  }
+
+  .cta__title {
+    font-size: var(--font-size-h2);
+    margin-bottom: 34px;
+  }
+
+  .cta__buttons {
+    margin-top: 0;
   }
 }
