--- a/sections/call-to-action.liquid
+++ b/sections/call-to-action.liquid
@@ -1,153 +1,103 @@
 {{ "call-to-action.css" | asset_url | stylesheet_tag }}
 
-{%- assign title                 = section.settings.title -%}
-{%- assign description           = section.settings.description -%}
-{%- assign button_1              = section.settings.button_1 -%}
-{%- assign button_url_1          = section.settings.button_url_1 -%}
-{%- assign button_2              = section.settings.button_2 -%}
-{%- assign button_url_2          = section.settings.button_url_2 -%}
-{%- assign image                 = section.settings.image -%}
 {%- assign color_palette         = section.settings.color_palette -%}
 {%- assign padding_top           = section.settings.padding_top -%}
 {%- assign padding_bottom        = section.settings.padding_bottom -%}
 {%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
 {%- assign padding_bottom_mobile = section.settings.padding_bottom_mobile -%}
-{%- assign background_style      = settings.background_style -%}
+{%- assign tag                   = section.settings.tag -%}
+{%- assign title                 = section.settings.title -%}
+{%- assign image                 = section.settings.image -%}
+{%- assign button_label          = section.settings.button_label -%}
+{%- assign button_url            = section.settings.button_url -%}
+{%- assign show_overlay          = section.settings.show_overlay -%}
 
 {% comment %} CSS variables start {% endcomment %}
 {%- capture variables -%}
   {%- case padding_top -%}
-      {%- when 'none' -%}
-        --padding-top: 0;
-      {%- when 'small' -%}
-        --padding-top: 24px;
-      {%- when 'medium' -%}
-        --padding-top: 68px;
-      {%- when 'large' -%}
-        --padding-top: 112px;
-    {%- endcase -%}
+    {%- when 'small' -%}
+      --padding-top: 60px;
+    {%- when 'medium' -%}
+      --padding-top: 100px;
+    {%- when 'large' -%}
+      --padding-top: 200px;
+  {%- endcase -%}
 
-    {%- case padding_bottom -%}
-      {%- when 'none' -%}
-        --padding-bottom: 0;
-      {%- when 'small' -%}
-        --padding-bottom: 24px;
-      {%- when 'medium' -%}
-        --padding-bottom: 68px;
-      {%- when 'large' -%}
-        --padding-bottom: 112px;
-    {%- endcase -%}
+  {%- case padding_bottom -%}
+    {%- when 'small' -%}
+      --padding-bottom: 60px;
+    {%- when 'medium' -%}
+      --padding-bottom: 100px;
+    {%- when 'large' -%}
+      --padding-bottom: 200px;
+  {%- endcase -%}
 
-    {%- case padding_top_mobile -%}
-      {%- when 'none' -%}
-        --padding-top-mobile: 0;
-      {%- when 'small' -%}
-        --padding-top-mobile: 18px;
-      {%- when 'medium' -%}
-        --padding-top-mobile: 54px;
-      {%- when 'large' -%}
-        --padding-top-mobile: 90px;
-    {%- endcase -%}
+  {%- case padding_top_mobile -%}
+    {%- when 'small' -%}
+      --padding-top-mobile: 40px;
+    {%- when 'medium' -%}
+      --padding-top-mobile: 100px;
+    {%- when 'large' -%}
+      --padding-top-mobile: 200px;
+  {%- endcase -%}
 
-    {%- case padding_bottom_mobile -%}
-      {%- when 'none' -%}
-        --padding-bottom-mobile: 0;
-      {%- when 'small' -%}
-        --padding-bottom-mobile: 18px;
-      {%- when 'medium' -%}
-        --padding-bottom-mobile: 54px;
-      {%- when 'large' -%}
-        --padding-bottom-mobile: 90px;
-    {%- endcase -%}
+  {%- case padding_bottom_mobile -%}
+    {%- when 'small' -%}
+      --padding-bottom-mobile: 40px;
+    {%- when 'medium' -%}
+      --padding-bottom-mobile: 100px;
+    {%- when 'large' -%}
+      --padding-bottom-mobile: 200px;
+  {%- endcase -%}
 {%- endcapture -%}
 {% comment %} CSS variables end {% endcomment %}
 
-<div
-  class="cta__wrapper text-medium{% if color_palette != blank %} palette-{{ color_palette }}{% endif %}{% if padding_top != blank or padding_top_mobile != blank %} cta__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} cta__wrapper--padding-bottom{%- endif -%}"
-  style="{{- variables | escape -}}"
->
-  <div class="cta__container container">
-    {%- if title != blank or description != blank or button_1 != blank or button_2 != blank -%}
-      <div class="cta__header">
+<div class="cta__wrapper palette-{{- color_palette -}}">
+  {%- if tag != blank or title != blank or button_label != blank and button_url != blank -%}
+    <div
+      class="cta__container container{% if padding_top != blank or padding_top_mobile != blank %} cta__container--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} cta__container--padding-bottom{%- endif -%}"
+      style="{{- variables | escape -}}"
+    >
+      <div class="cta__text-area">
+        {%- if tag != blank -%}
+          <strong class="cta__tag tagline">{{- tag -}}</strong>
+        {%- endif -%}
+
         {%- if title != blank -%}
-          <h2 class="cta__header-title">{{- title -}}</h2>
+          <h2 class="cta__title h4">{{- title -}}</h2>
         {%- endif -%}
 
-        {%- if description != blank -%}
-          <div class="cta__header-description bq-content rx-content">{{- description -}}</div>
-        {%- endif -%}
-
-        {%- if button_1 != blank or button_2 != blank -%}
-          <div class="cta__header-buttons">
-            {%- if button_1 != blank and button_url_1 != blank -%}
-              <a href="{{  btn_primary_url }}" class="cta__header-button button button--primary button--large">{{- button_1 -}}</a>
-            {%- endif -%}
-
-            {%- if button_2 != blank and button_url_2 != blank -%}
-              <a href="{{  btn_outline_url }}" class="cta__header-button button button--outlined button--large">{{- button_2 -}}</a>
-            {%- endif -%}
+        {%- if button_label != blank and button_url != blank -%}
+          <div class="cta__buttons">
+            <a href="{{ button_url }}" class="cta__button button button--primary button--large">{{- button_label -}}</a>
           </div>
         {%- endif -%}
       </div>
-    {%- endif -%}
-  </div>
-
-  {%- if image != blank -%}
-    <div class="cta__image-wrapper">
-      {%- render 'image',
-        image: image,
-        loading: 'lazy',
-        class: 'cta__image',
-        size: 'xxl'
-      -%}
     </div>
-  {%- else -%}
-    {%- unless background_style == 'none' -%}
-      {%- if background_style == 'cubes' -%}
-        <div class="cta__image-wrapper">
-          {%- render 'image-background-cubes' -%}
-        </div>
-      {%- elsif background_style == 'floral' -%}
-        <div class="cta__image-floral-wrapper">
-          <div class="cta__image-floral-wrapper-col">
-            {%- render 'image-background-flover-1' -%}
-          </div>
-          <div class="cta__image-floral-wrapper-col">
-            {%- render 'image-background-flover-3' -%}
-          </div>
-        </div>
-      {%- endif -%}
-    {%- endunless -%}
+
+    {%- if image != blank -%}
+      <div class="cta__vision{% if show_overlay %} cta__vision--overlay{%- endif -%}">
+        {%- render 'image',
+          image: image,
+          loading: 'lazy',
+          class: 'cta__image',
+          size: 'xxl'
+        -%}
+      </div>
+    {%- endif -%}
   {%- endif -%}
 </div>
 
 {% schema %}
   {
     "name": "Call to action",
-    "description": "Draw visitors' attentionwith a CTA section",
     "tag": "section",
     "class": "cta",
+    "description": "Draw visitors' attention with a CTA section",
     "settings": [
       {
         "type": "header",
         "content": "General settings"
-      },
-      {
-        "type": "text",
-        "id": "title",
-        "label": "Title",
-        "default": "Medium length heading goes here"
-      },
-      {
-        "type": "contentEditor",
-        "id": "description",
-        "label": "Description",
-        "default": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique."
-      },
-      {
-        "type": "image_picker",
-        "id": "image",
-        "label": "Background image"
       },
       {
         "type": "select",
@@ -165,9 +115,42 @@
           {
             "value": "three",
             "label": "Color set 3"
+          },
+          {
+            "value": "four",
+            "label": "Color set 4"
+          },
+          {
+            "value": "five",
+            "label": "Color set 5"
           }
         ],
         "default": "three"
+      },
+      {
+        "type": "text",
+        "id": "tag",
+        "label": "Tagline",
+        "default": "HIGHLIGHT",
+        "info": "Leave blank to hide tagline"
+      },
+      {
+        "type": "text",
+        "id": "title",
+        "label": "Title",
+        "default": "Explore the ride <br> of your life"
+      },
+      {
+        "type": "image_picker",
+        "id": "image",
+        "label": "Image",
+        "default": "booqable://assets/image-cta-2.jpeg"
+      },
+      {
+        "type": "checkbox",
+        "id": "show_overlay",
+        "label": "Show overlay",
+        "default": true
       },
       {
         "type": "header",
@@ -175,27 +158,15 @@
       },
       {
         "type": "text",
-        "id": "button_1",
-        "label": "Button 1 label",
-        "info": "Leave blank to hide the button",
-        "default": "Button"
+        "id": "button_label",
+        "label": "Button label",
+        "default": "Shop out products",
+        "info": "Leave blank to hide the button"
       },
       {
         "type": "url",
-        "id": "button_url_1",
-        "label": "Button 1 link"
-      },
-      {
-        "type": "text",
-        "id": "button_2",
-        "label": "Button 2 label",
-        "info": "Leave blank to hide the button",
-        "default": "Button"
-      },
-      {
-        "type": "url",
-        "id": "button_url_2",
-        "label": "Button 2 link"
+        "id": "button_url",
+        "label": "Button link"
       },
       {
         "type": "header",
@@ -223,7 +194,7 @@
             "label": "Large"
           }
         ],
-        "default": "large"
+        "default": "medium"
       },
       {
         "type": "select",
@@ -247,7 +218,7 @@
             "label": "Large"
           }
         ],
-        "default": "large"
+        "default": "medium"
       },
       {
         "type": "header",
@@ -275,7 +246,7 @@
             "label": "Large"
           }
         ],
-        "default": "medium"
+        "default": "large"
       },
       {
         "type": "select",
@@ -299,7 +270,7 @@
             "label": "Large"
           }
         ],
-        "default": "medium"
+        "default": "small"
       }
     ]
   }
