--- a/sections/accordion.liquid
+++ b/sections/accordion.liquid
@@ -3,45 +3,42 @@
 {%- if blocks.size > 0 -%}
 
   {{ "accordion.css" | asset_url | stylesheet_tag }}
-  {{ "accordion-block.css" | asset_url | stylesheet_tag }}
 
   {%- assign behavior              = section.settings.behavior -%}
   {%- assign color_palette         = section.settings.color_palette -%}
+  {%- assign description           = section.settings.description -%}
+  {%- assign image                 = section.settings.image -%}
   {%- assign padding_top           = section.settings.padding_top -%}
   {%- assign padding_bottom        = section.settings.padding_bottom -%}
   {%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
   {%- assign padding_bottom_mobile = section.settings.padding_bottom_mobile -%}
-  {%- assign background_style      = settings.background_style -%}
+  {%- assign rounded_corners       = section.settings.rounded_corners -%}
+  {%- assign show_borders          = section.settings.show_borders -%}
+  {%- assign title                 = section.settings.title -%}
 
   {% comment %} CSS variables start {% endcomment %}
   {%- capture variables -%}
     {%- case padding_top -%}
-      {%- when 'none' -%}
-        --padding-top: 0;
       {%- when 'small' -%}
-        --padding-top: 24px;
+        --padding-top: 40px;
       {%- when 'medium' -%}
-        --padding-top: 68px;
+        --padding-top: 80px;
       {%- when 'large' -%}
         --padding-top: 112px;
     {%- endcase -%}
 
     {%- case padding_bottom -%}
-      {%- when 'none' -%}
-        --padding-bottom: 0;
       {%- when 'small' -%}
-        --padding-bottom: 24px;
+        --padding-bottom: 40px;
       {%- when 'medium' -%}
-        --padding-bottom: 68px;
+        --padding-bottom: 80px;
       {%- when 'large' -%}
         --padding-bottom: 112px;
     {%- endcase -%}
 
     {%- case padding_top_mobile -%}
-      {%- when 'none' -%}
-        --padding-top-mobile: 0;
       {%- when 'small' -%}
-        --padding-top-mobile: 18px;
+        --padding-top-mobile: 24px;
       {%- when 'medium' -%}
         --padding-top-mobile: 40px;
       {%- when 'large' -%}
@@ -49,47 +46,86 @@
     {%- endcase -%}
 
     {%- case padding_bottom_mobile -%}
-      {%- when 'none' -%}
-        --padding-bottom-mobile: 0;
       {%- when 'small' -%}
-        --padding-bottom-mobile: 18px;
+        --padding-bottom-mobile: 24px;
       {%- when 'medium' -%}
         --padding-bottom-mobile: 40px;
       {%- when 'large' -%}
         --padding-bottom-mobile: 60px;
     {%- endcase -%}
+
+    {%- case rounded_corners -%}
+      {%- when 'none' -%}
+        --border-radius-rounded-blocks: 0px;
+      {%- when 'small' -%}
+        --border-radius-rounded-blocks: 8px;
+      {%- when 'medium' -%}
+        --border-radius-rounded-blocks: 16px;
+      {%- when 'large' -%}
+        --border-radius-rounded-blocks: 32px;
+    {%- endcase -%}
   {%- endcapture -%}
   {% comment %} CSS variables end {% endcomment %}
 
   <div
-    class="accordion__wrapper{% if color_palette != blank %} palette-{{ color_palette }}{% endif %}{% if padding_top != blank or padding_top_mobile != blank %} accordion__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} accordion__wrapper--padding-bottom{%- endif -%}"
+    class="accordion__wrapper palette-{{ color_palette }}{% if padding_top != blank or padding_top_mobile != blank %} accordion__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} accordion__wrapper--padding-bottom{%- endif -%}"
     style="{{- variables | escape -}}"
   >
     <div class="accordion__container container">
-      {%- render 'accordion-block',
-          blocks: blocks,
-          behavior: behavior
-      -%}
+      {%- if title != blank or description != blank -%}
+        <div class="accordion__top">
+          {%- if title != blank -%}
+            <h2 class="accordion__title h3">{{- title -}}</h2>
+          {%- endif -%}
+
+          {%- if description != blank -%}
+            <div class="accordion__description text-medium bq-content rx-content">{{- description -}}</div>
+          {%- endif -%}
+        </div>
+      {%- endif -%}
+
+      <ul class="accordion__list">
+        {%- for block in blocks -%}
+          {%- assign heading = block.settings.heading -%}
+          {%- assign content = block.settings.content -%}
+
+          <li class="accordion__item{% if show_borders %} accordion__item--with-border{% endif %}{% if rounded_corners %} accordion__item--rounded{%- endif -%}" id="{{- block.id -}}">
+            {%- if heading != blank -%}
+              <input
+                {% if behavior == "single" %}type="radio"{% else %}type="checkbox"{% endif %}
+                class="accordion__trigger"
+                id="accordion-item-{{- block.id -}}"
+                name="accordion trigger"
+              />
+
+              <label class="accordion__label" for="accordion-item-{{- block.id -}}">
+                <h3 class="accordion__heading">
+                  {{- heading -}}
+                  {%- render 'icon-arrow-right' -%}
+                </h3>
+              </label>
+            {%- endif -%}
+
+            {%- if content != blank -%}
+              <div class="accordion__content bq-content rx-content">
+                <p>{{- content -}}</p>
+              </div>
+            {%- endif -%}
+          </li>
+        {%- endfor -%}
+      </ul>
     </div>
 
-    {%- unless background_style == 'none' -%}
-      <div class="accordion__background">
-        {%- if background_style == 'cubes' -%}
-          <div class="accordion__background-wrapper">
-            {%- render 'image-background-cubes' -%}
-          </div>
-        {%- elsif background_style == 'floral' -%}
-          <div class="accordion__background-floral-wrapper">
-            <div class="accordion__background-floral-col">
-              {%- render 'image-background-flover-2' -%}
-            </div>
-            <div class="accordion__background-floral-col">
-              {%- render 'image-background-flover-3' -%}
-            </div>
-          </div>
-        {%- endif -%}
+    {%- if image != blank -%}
+      <div class="accordion__image-wrapper">
+        {%- render 'image',
+          image: image,
+          loading: 'lazy',
+          class: 'accordion__image',
+          size: 'xxl'
+        -%}
       </div>
-    {%- endunless -%}
+    {%- endif -%}
   </div>
 {%- endif -%}
 
@@ -116,9 +152,38 @@
           {
             "value": "two",
             "label": "Color set 2"
+          },
+          {
+            "value": "three",
+            "label": "Color set 3"
+          },
+          {
+            "value": "four",
+            "label": "Color set 4"
+          },
+          {
+            "value": "five",
+            "label": "Color set 5"
           }
         ],
-        "default": "two"
+        "default": "five"
+      },
+      {
+        "type": "text",
+        "id": "title",
+        "label": "Title",
+        "default": "FAQ"
+      },
+      {
+        "type": "contentEditor",
+        "id": "description",
+        "label": "Description",
+        "default": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique."
+      },
+      {
+        "type": "image_picker",
+        "id": "image",
+        "label": "Background image"
       },
       {
         "type": "select",
@@ -135,6 +200,36 @@
           }
         ],
         "default": "multiple"
+      },
+      {
+        "type": "checkbox",
+        "id": "show_borders",
+        "label": "Show borders",
+        "default": true
+      },
+      {
+        "type": "select",
+        "id": "rounded_corners",
+        "label": "Rounded corners",
+        "options": [
+          {
+            "value": "none",
+            "label": "None"
+          },
+          {
+            "value": "small",
+            "label": "Small"
+          },
+          {
+            "value": "medium",
+            "label": "Medium"
+          },
+          {
+            "value": "large",
+            "label": "Large"
+          }
+        ],
+        "default": "none"
       },
       {
         "type": "header",
@@ -162,7 +257,7 @@
             "label": "Large"
           }
         ],
-        "default": "large"
+        "default": "medium"
       },
       {
         "type": "select",
@@ -186,7 +281,7 @@
             "label": "Large"
           }
         ],
-        "default": "large"
+        "default": "medium"
       },
       {
         "type": "header",
@@ -254,14 +349,14 @@
           {
             "type": "text",
             "id": "heading",
-            "label": "Title",
+            "label": "Heading",
             "default": "How do I rent a product from your shop?"
           },
           {
             "type": "contentEditor",
             "id": "content",
             "label": "Description",
-            "default": "Lorem ipsum dolor sit amet consectetur. Ut sagittis massa diam bibendum netus in morbi. Imperdiet quis tempor nunc cum convallis massa. Risus egestas amet nam aliquet vulputate in non morbi blandit. Libero ultrices hendrerit purus id. Ultrices sed facilisi habitasse lobortis. Risus arcu donec duis id enim quam. Nisl pulvinar tortor amet posuere magna tincidunt."
+            "default": "Lorem ipsum dolor sit amet consectetur. Consequat sed a porttitor donec viverra ornare. Facilisi at interdum tellus tortor sed dictumst."
           }
         ]
       }
