--- a/assets/product-card.css
+++ b/assets/product-card.css
@@ -4,6 +4,10 @@
   position: relative;
   width: 100%;
   overflow: hidden;
+}
+
+.product-card--full-border,
+.product-card--image-border .product-card__vision {
   border-radius: var(--border-radius-rounded-blocks);
 }
 
@@ -47,7 +51,7 @@
   flex-grow: 1;
 }
 
-.product-card--border .product-card__meta {
+.product-card--full-border .product-card__meta {
   padding: 15px;
 }
 
@@ -104,12 +108,12 @@ bq-product-availability[visible="true"] {
   background: var(--background-primary-1);
 }
 
-.palette-one .product-card--border {
+.palette-one .product-card--full-border {
   border: 1px solid var(--color-border-1);
 }
 
-.palette-one .product-card--border .product-card__vision {
-  border-bottom: 1px solid var(--color-border-1);
+.palette-one .product-card--image-border .product-card__vision {
+  border: 1px solid var(--color-border-1);
 }
 
 .palette-one .product-card__vision.no-image {
@@ -130,12 +134,12 @@ bq-product-availability[visible="true"] {
   background: var(--background-primary-2);
 }
 
-.palette-two .product-card--border {
+.palette-two .product-card--full-border {
   border: 1px solid var(--color-border-2);
 }
 
-.palette-two .product-card--border .product-card__vision {
-  border-bottom: 1px solid var(--color-border-2);
+.palette-two .product-card--image-border .product-card__vision {
+  border: 1px solid var(--color-border-2);
 }
 
 .palette-two .product-card__vision.no-image {
@@ -156,12 +160,12 @@ bq-product-availability[visible="true"] {
   background: var(--background-primary-3);
 }
 
-.palette-three .product-card--border {
+.palette-three .product-card--full-border {
   border: 1px solid var(--color-border-3);
 }
 
-.palette-three .product-card--border .product-card__vision {
-  border-bottom: 1px solid var(--color-border-3);
+.palette-three .product-card--image-border .product-card__vision {
+  border: 1px solid var(--color-border-3);
 }
 
 .palette-three .product-card__vision.no-image {
@@ -182,12 +186,12 @@ bq-product-availability[visible="true"] {
   background: var(--background-primary-4);
 }
 
-.palette-four .product-card--border {
+.palette-four .product-card--full-border {
   border: 1px solid var(--color-border-4);
 }
 
-.palette-four .product-card--border .product-card__vision {
-  border-bottom: 1px solid var(--color-border-4);
+.palette-four .product-card--image-border .product-card__vision {
+  border: 1px solid var(--color-border-4);
 }
 
 .palette-four .product-card__vision.no-image {
@@ -208,12 +212,12 @@ bq-product-availability[visible="true"] {
   background: var(--background-primary-5);
 }
 
-.palette-five .product-card--border {
+.palette-five .product-card--full-border {
   border: 1px solid var(--color-border-5);
 }
 
-.palette-five .product-card--border .product-card__vision {
-  border-bottom: 1px solid var(--color-border-5);
+.palette-five .product-card--image-border .product-card__vision {
+  border: 1px solid var(--color-border-5);
 }
 
 .palette-five .product-card__vision.no-image {
